force-app/main/default/objects/KCSArticle_ViewStat__c.object
<CustomObject>
    <description>Used by Service Analytics v6+ Analytics App install. Do not remove.</description>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NormalizedScore__c</fullName>
        <label>NormalizedScore</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <externalId>true</externalId>
        <label>Parent ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ViewCount__c</fullName>
        <label>ViewCount</label>
        <precision>9</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>analyticsdemo_batch_id__c</fullName>
        <label>analyticsdemo_batch_id__c</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>KCSArticle_ViewStat__c</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>KCSArticle_ViewStat Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KCSArticle_ViewStat__c</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>